Changed custom CSS class name. Added more comments. Fixed typos.

--- a/frontend/styles/shared-styles.css
+++ b/frontend/styles/shared-styles.css
@@ -5,7 +5,7 @@
 */
 
 /* Example: CSS class name to center align the content . */
-.my-style {
+.centered-content {
   margin: 0 auto;
   max-width: 250px;
 }
