--- a/frontend/themes/my-theme/styles.css
+++ b/frontend/themes/my-theme/styles.css
@@ -1,19 +1,18 @@
-/*
-   CSS styling examples for the Vaadin app.
-
-   Visit https://vaadin.com/docs/styling/application-theme/ for more information.
-*/
-
-/* Example: CSS class name to center align the content . */
-.centered-content {
-  margin: 0 auto;
-  max-width: 250px;
+@import "theme-editor.css";
+/**
+ Sample styles for Theme Editor DX Project
+ */
+#outlet {
+  background: aliceblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* Example: the style is applied only to the textfields which have the `bordered` class name. */
-vaadin-text-field.bordered::part(input-field) {
-  box-shadow: inset 0 0 0 1px var(--lumo-contrast-30pct);
-  background-color: var(--lumo-base-color);
+.wizardPanel {
+  display: flex;
+  align-items: stretch;
+  height: auto;
+  background: white;
+  border: 1px solid grey;
 }
-
-
